feat(API): add joined spec model for workload
